2004-12-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_string.h: Fix of missing scopes thanks arabesc and
	Benjamin Redelings
	
	*stlport/config/stl_gcc.h: include schema fix for gcc >= 4.0.0 thanks 
	Oliver Stoeneberg
	
2004-12-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.c: Fix copy method thanks KL report.
	
	* stlport/stl/_vector.h, _deque.h: Fix implementation for vector of 
	movable objects when calling erase of a null range thanks to arabesc report.
	
	* stlport/stl/_string.h, _string_workaround.h, debug/_string.h, 
	  debug/_string_workaround.h: Implementation of the MSVC6 template method bug
	  workaround exclusively for MSVC6 and not anymore for all compilers.
	
2004-12-21  Petr Ovtchenkov  <ptr@island...>

	* src: untested (lost support) .mak and installation files moved into
	initial_mak catalog.

	* explore, src: explore catalog moved into src catalog. Makefiles from
	explore catalog became main makesystem of STLport.

2004-12-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.h: Fix of the const begin and end methods of the
	new implementation thanks Timothy Tenebekov report.

2004-12-17  Francois Dumont  <dums@stlport...>

	* stlport/cmath, cstdlib, stl/_cmath.h, config/stl_msvc.h: Configuration
	fixes for .Net 2002.

2004-12-17  Boris Fomitchev  <boris@stlport...>

	* char_traits.h: fixed _STLP_NO_WCHAR_T case
	
	* src/common_macros.mak: deleted locale.cpp
	
2004-12-17  Francois Dumont  <dums@stlport...>

	* src/explore/Makefiles/nmake/app/rules-install-a.mak, rules-install-so.mak
	lib/rules-install-so.mak: Creation of the install-shared and install-static
	from Michael Fink.

2004-12-16  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_debug.h, _debug.c: Creation of functions to change iterators
	list owner.
	
	* stlport/stl/debug/_list.h, _slist.h: Modification of the iterator owners in the
	splice, splice_after and merge method which do not invalidate iterators but only